<resources>
    <string name="app_name">充电提示音</string>
    <string name="change_sound">修改音频</string>
    <string name="plug_in_sound">充电器插入提示音</string>
    <string name="plug_out_sound">充电器拔出提示音</string>
    <string name="sound_file">当前音频文件 : %s</string>
    <string name="sound_name">音频名称</string>
    <string name="custom_name">自定义名称</string>
    <string name="select_file_failure">选择音频文件失败</string>
    <string name="untitled">未命名_%d</string>
    <string name="add_sound_failure">音频文件添加失败</string>
    <string name="add_sound_success">音频文件添加成功,快去修改音频吧</string>
    <string name="add_sound">添加到音频库</string>
    <string name="apply">选择</string>
    <string name="deleted">已删除 : %s</string>
    <string name="delete_failure">删除失败 : %s</string>
    <string name="tip_title">提示</string>
    <string name="tips">软件需要保持后台运行，请给予【自启动】权限以及后台运行权限，且对应用后台【上锁】，以免被系统杀死进程导致不能正确播放声音。推荐你再接下来的页面中打开自启动选项。</string>
    <string name="exclude_from_recents">隐藏最近任务</string>
    <string name="okay">确定</string>
    <string name="dont_mind_me">不再提示</string>
    <string name="request_ignore_battery_optimization">检测到APP被系统进行了电池优化，这会导致息屏或离开应用界面后【APP】被杀死，以致于不能后台播放提示音。本【APP】占用极小，推荐你在接下来的页面中找到【充电提示音】，并且设置电池优化选项为【不优化】</string>
    <string name="click_me_for_help">查看帮助</string>
    <string name="click_me_for_battery_optimization">电池优化</string>
    <string name="auto_start">自启设置</string>
    <string name="click_me_for_online_sound_library">在线音频</string>
    <string name="click_me_for_donate_developer">打赏作者</string>
    <string name="title_help">帮助</string>
    <string name="has_ignored_battery_optimization">电池优化选项已正确设置</string>
    <string name="ad_string">@string/app_name</string>
    <string name="ad_image_saved">二维码已保存，在接下来的界面选择图片扫码吧</string>
    <string name="charge_full">充满提示音</string>
    <string name="battery_low">低电量提示音</string>
    <string name="screen_on">解锁提示音</string>
    <string name="screen_off">锁屏提示音</string>
    <string name="click_me_for_import_sound">导入音频</string>
    <string name="header_popular">无论做什么，记得为自己而做，那就毫无怨言</string>
<!--    <string name="header_popular">官方QQ交流群：1138128928</string>-->
    <string name="header_want_support">本软件完全免费，可以支持一下作者下方的业务哦</string>
    <string name="header_useless">明天依旧光芒万丈</string>
    <string name="thanks">我还以为你找不到我呢</string>
    <string name="request_data_failure">获取远程数据失败 : %s, 请到【应用设置】中更改主服务地址再试</string>
    <string name="download_sound_failure">下载音频失败</string>
    <string name="download_sound_success">【%s】下载成功</string>
    <string name="downloading">正在后台下载…</string>
    <string name="only_can_download_one_file">一次只能下载一个文件哦</string>
    <string name="error_occur">出错啦！</string>
    <string name="insert_into_database_failure">将音频索引插入数据库时失败 : %s\n%s</string>
    <string name="cache_sound_file_failure">将音频存放到缓存目录时失败 : %s\n%s\n%s</string>
    <string name="custom_enable_time_range">自定义生效时间</string>
    <string name="custom_enable_time_start">开始时间</string>
    <string name="custom_enable_time_end">结束时间</string>
    <string name="custom_enable_time_failure">开始时间不能大于结束时间!</string>
    <string name="another_sound_is_playing">一次只能播放一个哦</string>
    <string name="audio_output_as_ringtone">使用通知音量</string>
    <string name="battery_level">电量提示音</string>
    <string name="change_level">修改电量</string>
    <string name="battery_level_title">%d%% 电量提示音</string>
    <string name="app_in_running">充电提示音正在为你护航</string>
    <string name="no_picker_installed">没有安装可用的选择器，请安装【音乐】APP或者【ES文件浏览器】等替代品</string>
    <string name="app_update">发现新版本</string>
    <string name="update_now">现在更新</string>
    <string name="request_permission">不授予写入权限程序无法导入以及下载音频，请授予</string>
    <string name="permission_denied">没权限，我不干了！</string>
    <string name="settings_mute_while_playing">隐藏系统提示音</string>
    <string name="pick_sound_from_file_manager">通过文件管理器音频</string>
    <string name="settings_sound">声音设置</string>
    <string name="settings_sound_channel">声音通道</string>
    <string name="desc_settings_sound_channel">以何种方式播放音频</string>
    <string name="settings_sound_standalone_volume">独立音量</string>
    <string name="desc_settings_sound_standalone_volume">单独设置播放音频时的音量,设置为 0 则不启用</string>
    <string name="desc_settings_mute_while_playing">此选项会延迟 300 毫秒播放音效,播放时将系统音频设置为静音,短暂延迟后恢复音量,随后进行音频播放,在大部分手机上能实现屏蔽【系统充电音】的效果,小部分会出现无声音或崩溃，实验性功能，谨慎开启！</string>
    <string name="settings_damn_options">后台设置</string>
    <string name="enabled">启用</string>
    <string name="settings">应用设置</string>
    <string name="desc_custom_time_enabled_single">此开关为【单个开关】，为当前提示音设置使用时间段。若【应用设置】中的【全局开关】设置了时间区间，则此开关可能失效。【单个开关】优先级小于【全局开关】</string>
    <string name="desc_custom_time_enabled">长按【主页】中的提示音方块可以单独设置提示音，若不在可用时间段，则不会发出声音。此开关为【全局开关】。【单个开关】优先级小于【全局开关】</string>
    <string name="ignore_battery_optimization">请求忽略电池优化</string>
    <string name="desc_ignore_battery_optimization">忽略掉电池优化可以避免程序后台被系统杀死，强烈推荐开启，本程序耗电量非常低，请放心食用</string>
    <string name="settings_sound_picker">音频选择器</string>
    <string name="desc_settings_sound_picker">这是导入音频时使用的选择器,通过【文件管理器】选择或【音乐】APP 选择，又或者是通过【内置音频搜索器】进行本机所有音频文件搜索再导入</string>
    <string name="settings_server">服务器设置</string>
    <string name="settings_main_server">主服务器地址</string>
    <string name="desc_settings_main_server">若访问在线音频出错，可尝试更换主服务器地址</string>
    <string name="default_server">https://imbavelee.coding.net/p/GiaoTone/d/giao-tone-server/git/raw/master</string>
    <string name="use_floating_service">流氓后台</string>
    <string name="desc_use_floating_service">模仿QQ，在手机上显示一个1x1的透明像素点，可以有效防止应用后台被系统杀死，此功能会申请【悬浮窗权限】，耗电量极小可忽略不计，不会对手机使用产生影响。对于总是被杀死后台的用户可以开启。此选项需要重启应用。</string>
    <string name="desc_exclude_from_recents">不在【最近任务】列表中显示程序，推荐在最近列表上锁后在开启此选项。此选项需要重启应用。</string>
    <string name="request_floating_service_permission">请在接下来的界面找到【充电提示音】，并允许【悬浮窗】权限，可能叫做【显示在其他应用的上层】等其他名字。</string>
    <string name="notify">提示</string>
    <string name="no_browser">未安装浏览器</string>
    <string name="click_me_for_join_qq_group">加入QQ群</string>
    <string name="desc_auto_start">@string/tips</string>
    <string name="understand">了解</string>
    <string name="change_time">启用时间</string>
    <string name="if_enabled">是否启用</string>
    <string name="save">保存</string>
    <string name="searching">搜索中…</string>
    <string name="import_sound">导入</string>
    <string name="searching_count">总共搜索到：%d 个音频\n搜索完成后右上角可以筛选文件哦</string>
    <string name="lost_audio_files">有%d个音频文件丢失了，大概率是被作为【垃圾】清理掉了，被清理掉的音频无法再次使用，已自动从【音频库】中删除，请重新导入\n\n被删除的音频文件有:\n%s</string>
    <string name="settings_debug">开发者调试</string>
    <string name="settings_show_log">显示程序运行日志</string>
    <string name="desc_settings_show_log">内置存储/Android/data/cn.bavelee.giaotone/files/程序运行日志.txt</string>
    <string name="desc_check_service">检查服务允许状态，请将内容复制给开发者更方便解决问题</string>
    <string name="settings_check_service">检查服务</string>
    <string name="avoid_mistake_touch">防误触模式</string>
    <string name="desc_avoid_mistake_touch">防止数据线接触不良短时间多次连续播放提示音，开启后设定时间内不会重复播放提示音。假设现在播放充电提示音，然后在设定时间内又快速触发了断电和充电，则不会播放任何提示音</string>
    <string name="title_avoid_mistake_touch">设置防误触时长</string>
    <string name="avoid_accidental_plug_out">防断冲模式</string>
    <string name="desc_avoid_accidental_plug_out">断开充电器后先不播放提示音，在设定时间内若没有重新插入充电器，则播放提示音，反之不播放</string>
    <string name="title_avoid_accidental_plug_out">设置意外断电时长</string>
    <string name="filter">筛选</string>
    <string name="copy_text">复制</string>
    <string name="copied">已复制到剪贴板</string>
    <string name="desc_rapid_check_screen_off">实时检测屏幕状态，不使用系统广播，系统广播存在延迟。此选项会增加少许功耗。此选项需要重启应用。</string>
    <string name="rapid_check_screen_off">快速检测锁屏状态</string>

</resources>
