<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:text="@string/change_time"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textSizeBig" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:text="@string/save"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/textSizeAction" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#999" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/enabledSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_custom_time_enabled_single"
            android:textColor="@color/colorGray"
            android:typeface="monospace" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/enabledSwitch"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custom_enable_time_start"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/textSizeAction" />

            <TextView
                android:id="@+id/tvStartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="00:00"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/textSizeNormal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/enabledSwitch"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custom_enable_time_end"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/textSizeAction" />

            <TextView
                android:id="@+id/tvEndTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="00:00"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/textSizeNormal" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
