<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/copy"
            android:gravity="center_vertical"
            android:text="@string/change_sound"
            android:textColor="@color/colorPlugIn"
            android:textSize="@dimen/textSizeBig"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/copy"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_toStartOf="@id/btn1"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:text="@string/copy_text"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/textSizeAction" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:text="@string/okay"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/textSizeAction" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#999" />
</LinearLayout>

